<resources>
    <string name="app_name">Mouj</string>
    <string name="main_no_internet">Tidak ada koneksi internet</string>
    <string name="main_null_json">Internet dalam keadaan lambat</string>
    <string name="exit_application">Anda yakin ingin keluar aplikasi?</string>
    <string name="start_upload_avatar">Memulai upload foto profil</string>
    <string name="done_upload_avatar">Upload foto profil selesai</string>
    <string name="start_upload_cover">Memulai upload foto sampul</string>
    <string name="done_upload_cover">Upload foto sampul seleasi</string>
    <string name="default_reminder">600000</string>
    <string name="google_api_key">AIzaSyDtGAzEHwvbYjWLLx6FLA_8_G2RD8e2uAI</string>
    <string name="error_player_youtube">There was an error initializing the YouTube (%1$s)</string>
    <string name="detail_post_caption_location">Lokasi</string>
    <string name="detail_post_caption_time">Waktu</string>
    <string name="home_dialog_option_title">Timeline Option</string>
    <string name="home_dialog_option_share_timeline">Simpan ke Favorit</string>
    <string name="home_dialog_option_delete_favorit">Hapus dari Favorit</string>
    <string name="home_dialog_option_share_socmed">Bagikan ke Sosial Media</string>
    <string name="home_dialog_option_share_report">Laporkan Artikel</string>
    <string name="home_dialog_option_repost_title">Repost</string>
    <string name="home_dialog_option_repost_title_undo">Undo Repost</string>
    <string name="home_dialog_option_repost_desc">Me-repost artikel ke dalam timeline</string>
    <string name="home_dialog_option_hide_post_title">Hide</string>
    <string name="home_dialog_option_hide_post_desc">Sembunyikan artikel ini dari timeline</string>
    <string name="home_dialog_option_report_title">Laporan</string>
    <string name="home_dialog_option_report_desc">Laporkan artikel ini kepada Administrator</string>
    <string name="home_dialog_option_post_group_title">Share ke Grup</string>
    <string name="create_post_maximum_upload_video">Upload video hanya bisa satu kali</string>
    <string name="create_post_maximum_upload_audio">Upload Audio hanya bisa satu kali</string>
    <string name="create_post_button_send">Post</string>
    <string name="create_post_button_pick_photo">Gambar</string>
    <string name="create_post_button_pick_video">Video</string>
    <string name="create_post_button_pick_sounds">Audio</string>
    <string name="create_post_button_pick_doc">File</string>
    <string name="create_post_youtube_invalid_url">Link youtube invalid</string>
    <string name="create_post_start_upload">Memulai upload file</string>
    <string name="create_post_done_upload">Upload file selesai</string>
    <string name="create_post_dialog_pick_file">Browse</string>
    <string name="create_post_dialog_pick_url">Youtube URL</string>
    <string name="create_post_dialog_pick_url_value">URL</string>
    <string name="create_post_editfield_title">Judul</string>
    <string name="create_post_editfield_content">Konten</string>
    <string name="create_post_upload_done">telah selesai diupload</string>
    <string name="create_post_upload_cancel">telah dibatalkan</string>
    <string name="create_post_upload_waiting">sedang menunggu upload file</string>
    <string name="create_post_upload_error">Upload file gagal karena </string>
    <string name="detail_post_attachment">Dokumen </string>
    <string name="v1_schedule_new_invalid_date">Pilih tanggal yang benar</string>
    <string name="schedule_detail_title">Detail Jadwal</string>
    <string name="masjid_step_one_address">Alamat</string>
    <string name="masjid_step_one_city">Kota</string>
    <string name="masjid_step_one_description">Keterangan</string>
    <string name="masjid_step_one_select_city">Pilih Kota</string>
    <string name="step_following_dialog_title">PROFIL</string>
    <string name="base_string_next">Lanjut</string>
    <string name="report_post_field_title">Judul Artikel : </string>
    <string name="report_post_field_message">Pesan</string>
    <string name="schedule_timeline_sort_title">Urutkan berdasarkan :</string>
    <string name="base_string_finish">Selesai</string>
    <string name="base_string_ok">OK</string>
    <string name="base_string_cancel">Batal</string>
    <string name="base_string_yes">Ya</string>
    <string name="base_string_no">Tidak</string>
    <string name="base_string_error">Error karena : </string>
    <string name="base_string_no_selected">Pilih data terlebih dahulu</string>
    <string name="base_string_follow">Follow</string>
    <string name="base_string_unfollow">Unfollow</string>
    <string name="base_string_invalid_follow">Anda harus follow</string>
    <string name="base_string_invalid_email">Email invalid</string>
    <string name="base_string_exit_title">Keluar Aplikasi</string>
    <string name="base_string_submit">Submit</string>
    <string name="base_string_save">Simpan</string>
    <string name="base_string_detail">Detail</string>
    <string name="base_string_edit">Ubah</string>
    <string name="base_string_delete_title">Hapus Artikel</string>
    <string name="base_string_delete_message">Anda yakin ingin menghapus data ini?</string>
    <string name="base_string_followed">Followed</string>
    <string name="schedule_timeline_repost_title">Repost dari </string>
    <string name="schedule_timeline_detail_addtome_title">Tambahkan Jadwal</string>
    <string name="schedule_timeline_detail_addtome_message">Anda yakin ingin menambahkan jadwal ini kedalam jadwal anda?</string>
    <string name="schedule_timeline_detail_delete">Hapus</string>
    <string name="schedule_timeline_detail_edit">Ubah</string>
    <string name="schedule_timeline_detail_share">Share</string>
    <string name="schedule_timeline_detail_addtome">Repost</string>
    <string name="search_edittext_hint">Cari</string>
    <string name="search_tab_ustadz">Ustadz</string>
    <string name="search_tab_masjid">Masjid</string>
    <string name="search_tab_hashtag">Hashtag</string>
    <string name="search_tab_post">Artikel</string>
    <string name="search_tab_group">Group</string>
    <string name="masjid_tambah_title">Masjid Sekitar</string>
    <string name="masjid_tambah_title2">Tambah Masjid</string>
    <string name="masjid_form_caption_fullname">Nama Masjid</string>
    <string name="masjid_form_caption_email">Email Pengurus</string>
    <string name="masjid_form_caption_phone">Nomor Telepon</string>
    <string name="masjid_form_caption_post">Kirim</string>
    <string name="sidemenu_create_group">Group</string>
    <string name="timeline_filter_masjid_ustadz">Masjid dan Ustadz</string>
    <string name="timeline_filter_masjid">Masjid</string>
    <string name="timeline_filter_ustadz">Ustadz</string>
    <string name="day_name_format">EEE</string>
    <string name="invalid_date">Date must be between %1$s and %2$s.</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="member_title_delete">Hapus Anggota</string>
    <string name="v1_login_username">Email</string>
    <string name="v1_login_password">Password</string>
    <string name="v1_login_forgot_caption">Lupa password ?</string>
    <string name="v1_login_button_sign">Login</string>
    <string name="v1_login_button_fb">Facebook</string>
    <string name="v1_login_button_gplus">Google</string>
    <string name="v1_login_caption_no_account">Anda tidak memiliki akun?</string>
    <string name="v1_login_caption_ref_signup">Daftar</string>
    <string name="v1_signup_title">Registrasi</string>
    <string name="v1_signup_field_fullname">Nama Lengkap</string>
    <string name="v1_signup_field_phone">Nomor Telepon</string>
    <string name="v1_signup_field_email">Email</string>
    <string name="v1_signup_field_password">Password</string>
    <string name="v1_signup_field_group">Kategori</string>
    <string name="v1_signup_field_username">Username</string>
    <string name="v1_signup_field_confirm_password">Konfirmasi Password</string>
    <string name="v1_signup_button">Gabung</string>
    <string name="v1_signup_validation_empty">tidak boleh kosong</string>
    <string name="v1_signup_validation_email">anda invalid</string>
    <string name="v1_signup_validation_equal">tidak sama dengan password</string>
    <string name="v1_signup_select_group">Pilih Kategori</string>
    <string name="title_activity_intro">Mouj</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="v1_schedule_title">Jadwal</string>
    <string name="v1_schedule_button_today">Hari ini</string>
    <string name="v1_schedule_button_create">Buat Jadwal</string>
    <string name="v1_schedule_button_more">Detail</string>
    <string name="v1_schedule_new_title">Buat Jadwal Baru</string>
    <string name="v1_schedule_new_editfield_title">Tambahkan Judul</string>
    <string name="v1_schedule_new_editfield_desc">TAMBAHKAN KETERANGAN</string>
    <string name="v1_schedule_new_textfield_title">Judul</string>
    <string name="v1_schedule_new_textfield_desc">Keterangan</string>
    <string name="v1_schedule_new_textfield_date">Tanggal</string>
    <string name="v1_schedule_new_textfield_time">Jam</string>
    <string name="v1_schedule_new_textfield_location">Lokasi</string>
    <string name="v1_schedule_new_textfield_repeat">Pengulangan</string>
    <string name="v1_schedule_new_dialog_title">Atur Tanggal</string>
    <string name="v1_schedule_new_dialog_ok">OK</string>
    <string name="v1_schedule_new_dialog_cancel">Batal</string>
    <string name="v1_schedule_new_dialog_title_location">Lokasi</string>
    <string name="title_activity_activity_base">ActivityBase</string>
    <string name="v1_sidemenu_item_home">Beranda</string>
    <string name="v1_sidemenu_item_schedule">Jadwal</string>
    <string name="v1_sidemenu_item_profile">Profil</string>
    <string name="v1_sidemenu_item_timeline">Timeline</string>
    <string name="v1_sidemenu_item_settings">PENGATURAN</string>
    <string name="v1_sidemenu_item_logout">LOG OUT</string>
    <string name="v1_profile_default_fullname">Ustadz</string>
    <string name="v1_profile_default_desc">Masjid Al Mukhlashin</string>
    <string name="v1_profile_tab_post">Artikel Favorit</string>
    <string name="v1_profile_tab_profile">Profil</string>
    <string name="v1_profile_tab_schedule">Jadwal</string>
    <string name="v1_profile_table_caption_password">Password</string>
    <string name="v1_profile_table_hint_password">(* Kosongkan jika tidak ingin diubah</string>
    <string name="v1_profile_table_caption_fullname">Nama Lengkap</string>
    <string name="v1_profile_table_caption_username">Username</string>
    <string name="v1_profile_table_caption_email">Email</string>
    <string name="v1_profile_table_caption_phone">Nomor Telepon</string>
    <string name="v1_profile_table_caption_desc">Deskripsi</string>
    <string name="v1_profile_table_caption_location">Lokasi</string>
    <string name="v1_profile_table_button_edit">Ubah Profil</string>
    <string name="v1_profile_table_button_save">Simpan Profil</string>
    <string name="title_activity_activity_profile">Profil</string>
    <string name="title_activity_activity_signup">ActivitySignup</string>
    <string name="schedule_connection_title">Tema</string>
    <string name="schedule_connection_target_ustadz">Ustadz</string>
    <string name="schedule_connection_target_masjid">Masjid</string>
    <string name="schedule_connection_target_masjid_caption">Tempat</string>
    <string name="pagetitle_report_post">Laporkan Artikel</string>
    <string name="pagetitle_testimoni">Testimoni</string>
    <string name="group_form_name">Nama Group</string>
    <string name="group_form_title_desc">Keterangan</string>
    <string name="group_form_hint_desc">Isi keterangan tentang grup</string>
    <string name="report_post_header">Form ini untuk melaporkan artikel yang berisi kata-kata kasar atau mengandung SARA</string>
</resources>