<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_dialog_option_bg"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/schedule_new_editfield"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:clickable="true"
        android:id="@+id/home_dialog_option_repost">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/app_name"
            android:src="@drawable/v1_icon_home_repost"
            android:id="@+id/home_dialog_icon_repost" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp">

            <com.mouj.app.view.ViewText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_black"
                android:textSize="16sp"
                android:text="@string/home_dialog_option_repost_title"
                android:layout_gravity="left"/>

            <com.mouj.app.view.ViewText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_black"
                android:textSize="14sp"
                android:text="@string/home_dialog_option_repost_desc"
                android:layout_gravity="left"/>

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/schedule_new_editfield"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:clickable="true"
        android:id="@+id/home_dialog_option_hide">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/app_name"
            android:src="@drawable/v1_icon_home_hide_post"
            android:id="@+id/home_dialog_icon_hide" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp">

            <com.mouj.app.view.ViewText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_black"
                android:textSize="16sp"
                android:text="@string/home_dialog_option_hide_post_title"
                android:layout_gravity="left"/>

            <com.mouj.app.view.ViewText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_black"
                android:textSize="14sp"
                android:text="@string/home_dialog_option_hide_post_desc"
                android:layout_gravity="left"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:clickable="true"
        android:id="@+id/home_dialog_option_report">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:contentDescription="@string/app_name"
            android:src="@drawable/v1_icon_home_report"
            android:id="@+id/home_dialog_icon_report" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp">

            <com.mouj.app.view.ViewText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_black"
                android:textSize="16sp"
                android:text="@string/home_dialog_option_report_title"
                android:layout_gravity="left"/>

            <com.mouj.app.view.ViewText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/base_black"
                android:textSize="14sp"
                android:text="@string/home_dialog_option_report_desc"
                android:layout_gravity="left"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>