<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/testimoni_relative_topbar"
        android:background="@drawable/main_topbar"
        android:layout_alignParentTop="true">

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:background="@android:color/transparent"
            android:id="@+id/testimoni_imagebutton_back"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/v1_icon_main_back"
            android:padding="10dp"
            android:contentDescription="@string/app_name" />

        <com.mouj.app.view.ViewText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_textview_pagetitle"
            android:layout_centerInParent="true"
            android:text="@string/pagetitle_testimoni"
            android:textColor="@color/main_topbar_title"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"/>

        <com.mouj.app.view.ViewButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="@string/base_string_save"
            android:textColor="@color/base_grey"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:id="@+id/group_btn_testimoni_create" />

    </RelativeLayout>

</RelativeLayout>
